# auth_django_template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yaml
core/: settings.py  urls.py
src/users/: admin.py  forms.py  models.py  urls.py  views.py
src/users/templates/auth/: login.html  message_to_email.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  register.html
templates/: base.html  index.html
