[tool.poetry]
name = "full-auth-template-django"
version = "0.1.0"
description = ""
authors = ["diordev <diordev@icloud.com>"]
readme = "README.md"
packages = [{include = "full_auth_template_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
